--- a/package.json
+++ b/package.json
@@ -1,33 +1,28 @@
 {
-    "name": "elr-sort",
-    "version": "1.0.0",
-    "description": "sort content",
-    "main": "dist/elr-sort.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "keywords": [
-        "jquery",
-        "javascript",
-        "ux",
-        "sort"
-    ],
-    "homepage": "http://elizabeth-rogers.com/elr-utilities/elr-sort.html",
-    "license": "MIT",
-    "author": {
-        "name": "Elizabeth Rogers",
-        "email": "beth@elizabeth-rogers.com",
-        "url": "http://elizabeth-rogers.com"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/elr-utilities/elr-sort.git"
-    },
-    "devDependencies": {
-        "grunt": "~0.4.4",
-        "grunt-contrib-concat": "~0.3.0",
-        "grunt-contrib-uglify": "~0.4.0",
-        "grunt-contrib-clean": "~0.5.0",
-        "grunt-contrib-jshint": "~0.9.2"
-    }
+  "name": "elr-sort",
+  "version": "1.0.1",
+  "description": "list sorting",
+  "main": "dist/elr-sort.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/elr-utilities/elr-sort.git"
+  },
+  "scripts": {
+    "build": "build"
+  },
+  "dependencies": {
+    "babel-runtime": "^6.0.0",
+    "elr-utility-lib": "^1.0.5",
+    "jquery": "^3.1.1"
+  },
+  "devDependencies": {
+    "babel-core": "^6.0.0",
+    "babel-preset-es2015": "^6.14.0",
+    "del": "^2.2.2",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-jshint": "^2.0.1",
+    "gulp-sourcemaps": "^2.1.1",
+    "jshint": "^2.9.3"
+  }
 }
