--- a/package.json
+++ b/package.json
@@ -9,32 +9,32 @@
   },
   "dependencies": {
     "babel-runtime": "^6.0.0",
-    "elr-ui": "^0.1.0",
-    "elr-utility-lib": "^1.0.5",
+    "elr-ui": "^0.2.1",
+    "elr-utility-lib": "^2.0.1",
     "jquery": "^3.1.1"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
     "babel-preset-es2015": "^6.14.0",
-    "chai": "^3.5.0",
-    "chai-arrays": "0.0.1",
+    "chai": "^4.1.2",
+    "chai-arrays": "2.0.0",
     "chai-jquery": "^2.0.0",
     "chai-shallow-deep-equal": "^1.4.4",
     "chai-subset": "^1.3.0",
-    "codecov": "^1.0.1",
-    "del": "^2.2.2",
-    "ghooks": "^1.3.2",
+    "codecov": "^3.0.0",
+    "del": "^3.0.0",
+    "ghooks": "^2.0.0",
     "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
+    "gulp-babel": "^7.0.0",
     "gulp-jshint": "^2.0.1",
-    "gulp-mocha": "^3.0.1",
-    "gulp-notify": "^2.2.0",
+    "gulp-mocha": "^4.3.1",
+    "gulp-notify": "^3.0.0",
     "gulp-plumber": "^1.1.0",
     "gulp-sourcemaps": "^2.1.1",
     "jshint": "^2.9.3",
-    "mocha": "^3.2.0",
+    "mocha": "^4.0.1",
     "mocha-notifier-reporter": "^0.1.2",
-    "nyc": "^10.0.0"
+    "nyc": "^11.2.1"
   },
   "homepage": "http://www.elizabeth-rogers.com/elr-utilities/js-sort.html",
   "keywords": [
@@ -63,8 +63,7 @@
   },
   "scripts": {
     "build": "build",
-    "test": "nyc mocha test/test.js --compilers js:babel-core/register",
-    "test watch": "nyc mocha test/test.js watch --compilers js:babel-core/register",
+    "test": "nyc mocha test/test.js",
     "cover": "nyc --reporter=lcov npm test",
     "report-coverage": "cat ./coverage/lcov.info | codecov"
   }
